--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Properties#show</h1>
-<p>Find me in app/views/properties/show.html.erb</p>
+<p>物件名 : <%= @property.name %></p>
+<p>賃料： <%= @property.rent %></p>
+<p>住所： <%= @property.address %></p>
+<p>築年数 <%= @property.age_building %></p>
+<p>備考 <%= @property.remarks %></p>
