--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -15,9 +15,9 @@
       <td><%= @property.address %></td>
       <td><%= @property.age_building %></td>
       <td><%= @property.remarks %></td>
-      <%= link_to '詳細', property %>
-      <%= link_to '編集', edit_property_path(property) %>
-      <%= link_to '削除', property, method: :delete, data: { confirm: '本当に消してもいいですか？' } %>
+      <td><%= link_to '詳細', property_path(property.id) %></td>
+      <td><%= link_to '編集', edit_property_path(property) %></td>
+      <td><%= link_to '削除', property, method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
     </tr>  
   <% end %>
 </table>
