--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,5 +1,7 @@
+<h2>閲覧</h2>
 <p>物件名 : <%= @property.name %></p>
 <p>賃料： <%= @property.rent %></p>
 <p>住所： <%= @property.address %></p>
 <p>築年数 <%= @property.age_building %></p>
 <p>備考 <%= @property.remarks %></p>
+<%= link_to '編集', edit_property_path %><%= link_to '戻る', properties_path %>
