--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: property.new, local: true) do |form| %>
+<%= form_with(model: @property, local: true) do |form| %>
   <div>
     <%= form.label :物件名 %>
     <%= form.text_field :name %>
@@ -14,7 +14,7 @@
   <div>
     <%= form.label :築年数 %>
     <%= form.text_field :age_building %>
-  </div>]
+  </div>
   <div>
     <%= form.label :備考 %>
     <%= form.text_field :remarks %>
