--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -10,14 +10,14 @@
   </tr>
   <% @properties.each do |property|  %>
     <tr>
-      <td><%= @property.name %></td>
-      <td><%= @property.rent %></td>
-      <td><%= @property.address %></td>
-      <td><%= @property.age_building %></td>
-      <td><%= @property.remarks %></td>
+      <td><%= property.name %></td>
+      <td><%= property.rent %></td>
+      <td><%= property.address %></td>
+      <td><%= property.age_building %></td>
+      <td><%= property.remarks %></td>
       <td><%= link_to '詳細', property_path(property.id) %></td>
-      <td><%= link_to '編集', edit_property_path(property) %></td>
-      <td><%= link_to '削除', property, method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
+      <td><%= link_to '編集', edit_property_path(property.id) %></td>
+      <td><%= link_to '削除', property_path(property.id), method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
     </tr>  
   <% end %>
 </table>
