--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,24 +1,27 @@
 <h2>一覧</h2>
-<h1>物件一覧</h1>
-<table>
-  <tr>
-    <th>物件名</th>
-    <th>賃料</th>
-    <th>住所</th>
-    <th>築年数</th>
-    <th>備考</th>
-  </tr>
-  <% @properties.each do |property|  %>
+<hr>
+<div class="index_area">
+  <h1>物件一覧</h1>
+  <table>
     <tr>
-      <td><%= property.name %></td>
-      <td><%= property.rent %></td>
-      <td><%= property.address %></td>
-      <td><%= property.age_building %></td>
-      <td><%= property.remarks %></td>
-      <td><%= link_to '詳細', property_path(property.id) %></td>
-      <td><%= link_to '編集', edit_property_path(property.id) %></td>
-      <td><%= link_to '削除', property_path(property.id), method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
-    </tr>  
-  <% end %>
-</table>
-<%= link_to '物件を登録する', new_property_path %>
+      <th>物件名</th>
+      <th>賃料</th>
+      <th>住所</th>
+      <th>築年数</th>
+      <th>備考</th>
+    </tr>
+    <% @properties.each do |property|  %>
+      <tr>
+        <td><%= property.name %></td>
+        <td><%= property.rent %></td>
+        <td><%= property.address %></td>
+        <td><%= property.age_building %></td>
+        <td><%= property.remarks %></td>
+        <td><%= link_to '詳細', property_path(property.id) %></td>
+        <td><%= link_to '編集', edit_property_path(property.id) %></td>
+        <td><%= link_to '削除', property_path(property.id), method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
+      </tr>  
+    <% end %>
+  </table>
+  <%= link_to '物件を登録する', new_property_path %>
+</div>
