--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,4 @@
 <h2>登録</h2>
-<h1>物件登録</h1>
+<h1 class="title">物件登録</h1>
 <%= render 'form' %>
-<%= link_to '戻る', properties_path %>
+<span class="link_area"><%= link_to '戻る', properties_path %></span>
