--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,4 +1,4 @@
 <h2>編集</h2>
-<h1>物件編集</h1>
+<h1 class="title">物件編集</h1>
 <%= render 'form' %>
-<%= link_to '詳細', property_path %>
+<span class="link_area"><%= link_to '詳細', property_path %> | <%= link_to '戻る', properties_path %></span>
