--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,23 +1,25 @@
 <h2>閲覧</h2>
-<p>物件名 : <%= @property.name %></p>
-<p>賃料： <%= @property.rent %></p>
-<p>住所： <%= @property.address %></p>
-<p>築年数 <%= @property.age_building %></p>
-<p>備考 <%= @property.remarks %></p>
-
-<% @stations.each_with_index do |station, i| %>
-  <% if @property.stations.any? %>
-  <h3>最寄り駅<%= i + 1 %></h3>
-  <br>
-  <b>路線名</b>
-  <%= station.route_name %>
-  <br><br>
-  <b>路名</b>
-  <%= station.station_name %>
-  <br><br>
-  <b>徒歩分数</b>
-    <%= station.walking_time %>  
+<div class="show_area">
+  <p>物件名 : <%= @property.name %></p>
+  <p>賃料： <%= @property.rent %></p>
+  <p>住所： <%= @property.address %></p>
+  <p>築年数 <%= @property.age_building %></p>
+  <p>備考 <%= @property.remarks %></p>
+  <hr>
+  <% @stations.each_with_index do |station, i| %>
+    <% if @property.stations.any? %>
+    <h3>最寄り駅<%= i + 1 %></h3>
+    <br>
+    <b>路線名</b>
+    <%= station.route_name %>
     <br><br>
+    <b>路名</b>
+    <%= station.station_name %>
+    <br><br>
+    <b>徒歩分数</b>
+      <%= station.walking_time %>  
+      <br><br>
+    <% end %>
   <% end %>
-<% end %>
-<%= link_to '編集', edit_property_path %><%= link_to '戻る', properties_path %>
+  <span><%= link_to '編集', edit_property_path %> | <%= link_to '戻る', properties_path %></span>
+</div>
