--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -22,6 +22,6 @@
         <td><%= link_to '削除', property_path(property.id), method: :delete, data: { confirm: '本当に消してもいいですか？' } %></td>
       </tr>  
     <% end %>
-  </table>
+  </table><br>
   <%= link_to '物件を登録する', new_property_path %>
 </div>
